# bidl

./: .gitignore  README.md  README_GET_STARTED.md  backup.sh  benchmark.sh  breakdown.py  breakdown.sh  clean.sh  cluster-setup.sh  config-fabric.yaml  config-fastfabric-contented.yaml  config-fastfabric.yaml  config.sh  configtx.yaml  conflict.py  copy_bidl_images.sh  create_artifact.sh  crypto-config.yaml  deploy.sh  docker-compose-fabric.yaml  docker-compose-fastfabric.yaml  example.sh  generate.py  latency_p1.py  latency_p2.py  orderer.py  presetup.sh  process-latency.sh  readme.md  run-bidl-local.sh  run-bidl.sh  run-fabric.sh  run-ff.sh  run-hotstuff.sh  run-sbft.sh  run-streamchain.sh  run.sh  runall.sh  scp.sh  servers.md  (+5 more)
SBFT/: .gitignore  CMakeLists.txt  Dockerfile_base  README.md  build.sh  install_deps.sh
SBFT/communication/src/: PlainTcpCommunication.cpp
SBFT/evaluation/: run.sh  stop.sh  tput.py  utils.sh
SBFT/tests/simpleTest/: client.cpp  replica.cpp  simple_test_client.hpp  simple_test_replica.hpp
backup_logs/log_Fri_Aug_20_00_57_01_HKT_2021/logs/: readme.md
bidl/: .gitignore  README.md
bidl/consensus_node/bftsmart/: .gitignore  Dockerfile  README.md  build.xml  docker-compose.yaml  docker-test-client.yaml  docker-test-server.yaml
bidl/draw/: tput_latency.py
bidl/normal_node/: .gitignore  Dockerfile  README.md  client  go.mod  go.sum
bidl/normal_node/cmd/: README.md
bidl/scripts/: benchmark.sh  bidl_latency.py  bidl_tput.py  build_image.sh  compile.sh  consensus_latency.py  copy_smart_config.sh  copy_smart_docker.sh  create_artifact.sh  deploy.sh  deploy_bidl.sh  deploy_smart_docker.sh  env.sh  gen_host_conf.sh  get_data.sh  kill_all.sh  kill_all_local.sh  local_start.sh  servers  set_udp_buffer.sh  ssh_copy_id.sh  start.sh  start_bidl.sh  start_bidl_only_normal.sh  start_bidl_scalability.sh  start_local.sh  start_local_only_consensus.sh  start_local_test.sh  test.sh  test_run.sh
bidl/scripts/configs/: hosts_13.config  hosts_25.config  hosts_4.config  hosts_49.config  hosts_7.config  system_13.config  system_25.config  system_49.config
bidl/sequencer/: Dockerfile  README.md  get  get.cpp  sequencer  sequencer_multicast.cpp
bidl/state.db/: 000004.ldb  000019.ldb  000032.ldb  LOG  MANIFEST-000021  MANIFEST-000036  MANIFEST-000038  MANIFEST-000072
chaincode/smallbank/: smallbank.go
channel-artifacts/: anchor_peer.tx  channel.tx  genesis.block
fabric/: .project  log
fabric/common/cauthdsl/: policy.go
fabric/common/deliver/: deliver.go
fabric/core/: .project
fabric/core/chaincode/: .project  chaincode_support.go  handler.go
fabric/core/deliverservice/: client.go  deliveryclient.go
fabric/core/endorser/: endorser.go  plugin_endorser.go
fabric/core/peer/: deliverevents.go  peer.go
fabric/core/policy/: policy.go
fabric/examples/: .project
fabric/examples/chaincode/: .project
fabric/gossip/comm/: comm_impl.go
fabric/gossip/gossip/: certstore.go
fabric/gossip/privdata/: coordinator.go
fabric/sampleconfig/: core.yaml
fastfabric/: .project  Makefile  README.md  tpsConfig.yaml
fastfabric/bidl_scripts/: blk_gen_tput.py  blk_tput.py  build.sh  tput.py  tput_e2e.py  tx_recv_tput.py  tx_tput.py
fastfabric/core/: .project
fastfabric/examples/: .project
fastfabric/sampleconfig/: core.yaml  orderer.yaml
figure/: Dockerfile  contention.py  fig3.py  fig3_bidl.py  fig5.py  fig5_bidl.py  fig6.py  fig7.py  fig7_bidl.py  fig8.py  fig8_bidl.py  malicious.py  malicious_bar.py  malicious_css.py  malicious_tput.py  nondeterminism.py  performance.py  scalability.py  table2.py  table2.txt
hotstuff/: .gitignore  Dockerfile  Dockerfile_base  README.md  hotstuff-keygen  hotstuff-sec0.conf  hotstuff-sec1.conf  hotstuff-sec2.conf  hotstuff-sec3.conf  hotstuff-sec4.conf  hotstuff-sec5.conf  hotstuff-sec6.conf  hotstuff-sec7.conf  hotstuff-tls-keygen  hotstuff.conf
hotstuff/docker/: command.sh  config.sh  copy_hotstuff_docker.sh  deploy.sh  id_rsa  id_rsa.pub  kill_docker.sh  run.sh  servers  ssh.sh
hotstuff/evaluation/: plot.py  results.txt  results_consensus_on_hash.txt  results_max_async100.txt  results_max_async125.txt  results_max_async150.txt
hotstuff/examples/: hotstuff_app.cpp  hotstuff_client.cpp
hotstuff/log_client/: clog0
hotstuff/log_rep/: log0
hotstuff/salticidae/: .gitignore  CMakeLists.txt  LICENSE  README.rst  TODO.rst
hotstuff/salticidae/cmake/Modules/: FindLibevent.cmake  FindLibuv.cmake
hotstuff/salticidae/include/salticidae/: buffer.h  conn.h  crypto.h  endian.h  event.h  msg.h  netaddr.h  network.h  queue.h  ref.h  stream.h  type.h  util.h
hotstuff/salticidae/src/: config.h.in  conn.cpp  crypto.cpp  event.cpp  msg.cpp  netaddr.cpp  network.cpp  stream.cpp  type.cpp  util.cpp
hotstuff/salticidae/test/: .gitignore  CMakeLists.txt  alice.pem  bench_network.cpp  bench_network_tls.cpp  bob.pem  test_bits.cpp  test_bounded_recv_buffer.cpp  test_msg.cpp  test_msgnet.cpp  test_msgnet_c.c  test_msgnet_tls.cpp  test_p2p.cpp  test_p2p_min.cpp  test_p2p_stress.cpp  test_p2p_tls.cpp  test_queue.cpp
hotstuff/scripts/: gen_conf.py  move.sh  run_demo.sh  run_demo_client.sh  thr_hist.py
hotstuff/src/: HotStuffCollector.cpp  collector.cpp  consensus.cpp  entity.cpp  hotstuff.cpp
keys/: id_rsa  id_rsa.pub
scripts/: script.sh  utils.sh
streamchain/: README.md
streamchain/setup/: README.md  add_title.sh  config.sh  config.sh.big  config.sh.fpga  copy_files.sh  generate_configtx.sh  generate_crypto.sh  log.json  proc_endorsement.sh  proc_ordering.sh  proc_txval.sh  proc_validation.sh  process_logs.sh  reconfigure.sh  run.sh  run_all_scmp.sh  run_batchwrite.sh  run_main.sh  run_main_scmp.sh  run_pipeline.sh  run_txval.sh  setup_network.sh  start_network.sh  teardown.sh
tape/: .gitignore  README.md  config.yaml  config_fastfabric.yaml  go.mod  go.sum
tape/scripts/: conflict.sh  tput.py
(+590 files in other folders)
